@@ -53,13 +53,14 @@ sub BUILD
 {
     my $self = shift;
     my $zilla = $self->zilla;
+    my $meta = find_meta($zilla);
 
     # no phases have been run yet, so we can effectively capture the initial
     # state of the zilla object (and determine its construction args)
     %zilla_constructor_args = map {
-        my $attr = find_meta($zilla)->find_attribute_by_name($_);
-        $attr->has_value($zilla) ? ( $_ => $attr->get_value($zilla) ) : ()
-    } qw(name version abstract main_module authors distmeta _license_class _copyright_holder _copyright_year);
+        my $attr = $meta->find_attribute_by_name($_);
+        $attr && $attr->has_value($zilla) ? ( $_ => $attr->get_value($zilla) ) : ()
+    } qw(name version release_status abstract main_module authors distmeta _license_class _copyright_holder _copyright_year),
 }
 
 # nothing to put in dump_config yet...
@@ -79,11 +80,14 @@ sub gather_files
     my $self = shift;
 
     my $zilla = $self->zilla;
-    foreach my $attr_name (qw(name version abstract main_module authors distmeta))
+    my $meta = find_meta($zilla);
+
+    foreach my $attr_name (qw(name version release_status abstract main_module authors distmeta))
     {
         next if exists $zilla_constructor_args{$attr_name};
+        my $attr = $meta->find_attribute_by_name($attr_name);
         $self->_alert($attr_name . ' has already been calculated by end of file gathering phase')
-            if find_meta($zilla)->find_attribute_by_name($attr_name)->has_value($zilla);
+            if $attr and $attr->has_value($zilla);
     }
 
     # license is created from some private attrs, which may have been provided
@@ -91,7 +95,7 @@ sub gather_files
     $self->_alert('license has already been calculated by end of file gathering phase')
         if any {
             not exists $zilla_constructor_args{$_}
-                and find_meta($zilla)->find_attribute_by_name($_)->has_value($zilla)
+                and $meta->find_attribute_by_name($_)->has_value($zilla)
         } qw(_license_class _copyright_holder _copyright_year);
 
     # all files should have been added by now. save their filenames/objects
@@ -304,6 +308,7 @@ distribution, with known encodings:
 =for :list
 * name
 * version
+* release_status
 * abstract
 * main_module
 * license
